--- a/old-pages/contact.html
+++ b/old-pages/contact.html
@@ -266,7 +266,7 @@
 
     <!-- Begin JavaScript -->
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false'></script>
+    <script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false'></script>
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="js/migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/modernizr-respond.js"></script>
