--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!-- Begin Open Graph data -->
     <meta property="og:title" content="Pavlos Nikolaou" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pavlos-nikolaou.github.io/pavlosnikolaouonline/music/index.html" />
-    <meta property="og:image" content="https://pavlos-nikolaou.github.io/pavlosnikolaouonline/assets/images/pavlos-nikolaou.jpeg" />
+    <meta property="og:url" content="https://pavlosnikolaou.com/music/index.html" />
+    <meta property="og:image" content="https://pavlosnikolaou.com/assets/images/pavlos-nikolaou.jpeg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
