--- a/music/index.html
+++ b/music/index.html
@@ -31,20 +31,20 @@
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
     <!-- End Open Graph data -->
 
-    <link rel="icon" href="../assets/images/favicon.ico" />
+    <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
 
     <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="../assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/entypo/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/icomoon/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/font_awesome/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/cosy/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/flexslider/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/Magnific-Popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/mb.YTPlayer/css/YTPlayer.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/animate.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/reset.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/entypo/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/icomoon/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/font_awesome/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/cosy/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/flexslider/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/css/YTPlayer.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/animate.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/style.css">
     <!-- End Stylesheets -->
 
     <!-- Google tag (gtag.js) -->
@@ -75,14 +75,14 @@
     <!-- Begin Header -->
     <header>
 
-        <a href="../index.html" class="logo-container">
+        <a href="https://pavlosnikolaou.com/index.html" class="logo-container">
             <h3 class="title">PAVLOS NIKOLAOU PHOTOGRAPHY</h3>
         </a>
 
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html" class="active">PORTFOLIO</a>
+                    <a href="https://pavlosnikolaou.com/index.html" class="active">PORTFOLIO</a>
                 </li>
                 <li>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1R3Gofkp5S0SEyexsnsX2-aoNORlbE4TiwV8mcdSVkZcWjw/viewform">CONTACT</a>
@@ -145,39 +145,39 @@
 
                         <div class="images">
 
-                            <a href="../assets/images/gallery/music/music_1.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_1.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_1.jpg" alt=""
                                     data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/music/music_2.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_2.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_2.jpg" alt=""
                                     data-width="1620" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/music/music_3.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_3.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_3.jpg" alt=""
                                     data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/music/music_4.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_4.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_4.jpg" alt=""
                                     data-width="1620" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/music/music_5.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_5.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_5.jpg" alt=""
                                     data-width="1620" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/music/music_6.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_6.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_6.jpg" alt=""
                                     data-width="1620" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/music/music_7.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_7.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_7.jpg" alt=""
                                     data-width="1620" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/music/music_8.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_8.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_8.jpg" alt=""
                                     data-width="1620" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/music/music_9.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/music/music_9.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/music/music_9.jpg" alt=""
                                     data-width="720" data-height="1080">
                             </a>
