--- a/old-pages/contact.html
+++ b/old-pages/contact.html
@@ -28,10 +28,10 @@
     <link type="text/css" rel="stylesheet" href="includes/icomoon/style.css">
     <link type="text/css" rel="stylesheet" href="includes/font_awesome/font-awesome.css">
     <link type="text/css" rel="stylesheet" href="includes/cosy/style.css">
-    <link type="text/css" rel="stylesheet" href="js/jquery-ui/jquery-ui-1.10.3.custom.min.css">
-    <link type="text/css" rel="stylesheet" href="js/flexslider/style.css">
-    <link type="text/css" rel="stylesheet" href="js/Magnific-Popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="js/mb.YTPlayer/css/YTPlayer.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/jquery-ui/jquery-ui-1.10.3.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/flexslider/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/Magnific-Popup/magnific-popup.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/mb.YTPlayer/css/YTPlayer.css">
     <link type="text/css" rel="stylesheet" href="css/animate.min.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link type="text/css" rel="stylesheet" href="css/custom.css">
