--- a/old-pages/portfolio.html
+++ b/old-pages/portfolio.html
@@ -29,20 +29,20 @@
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
     <!-- End Open Graph data -->
 
-    <link rel="icon" href="../assets/images/favicon.ico" />
+    <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
 
     <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="../assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/entypo/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/icomoon/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/font_awesome/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/cosy/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/flexslider/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/Magnific-Popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/mb.YTPlayer/css/YTPlayer.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/animate.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/reset.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/entypo/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/icomoon/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/font_awesome/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/cosy/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/flexslider/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/css/YTPlayer.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/animate.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/style.css">
     <!-- End Stylesheets -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
