--- a/food/index.html
+++ b/food/index.html
@@ -28,20 +28,20 @@
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
     <!-- End Open Graph data -->
 
-    <link rel="icon" href="../assets/images/favicon.ico" />
+    <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
 
     <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="../assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/entypo/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/icomoon/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/font_awesome/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/cosy/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/flexslider/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/Magnific-Popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/mb.YTPlayer/css/YTPlayer.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/animate.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/reset.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/entypo/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/icomoon/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/font_awesome/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/cosy/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/flexslider/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/css/YTPlayer.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/animate.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/style.css">
     <!-- End Stylesheets -->
 
     <!-- Google tag (gtag.js) -->
@@ -71,14 +71,14 @@
     <!-- Begin Header -->
     <header>
 
-        <a href="../index.html" class="logo-container">
+        <a href="https://pavlosnikolaou.com/index.html" class="logo-container">
             <h3 class="title">PAVLOS NIKOLAOU PHOTOGRAPHY</h3>
         </a>
 
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html" class="active">PORTFOLIO</a>
+                    <a href="https://pavlosnikolaou.com/index.html" class="active">PORTFOLIO</a>
                 </li>
                 <li>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1R3Gofkp5S0SEyexsnsX2-aoNORlbE4TiwV8mcdSVkZcWjw/viewform">CONTACT</a>
@@ -141,88 +141,88 @@
 
                         <div class="images">
 
-                            <a href="../assets/images/gallery/food/food_1.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_1.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_1.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_2.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_2.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_2.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_3.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_3.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_3.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_4.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_4.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_4.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_5.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_5.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_5.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_6.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_6.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_6.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_7.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_7.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_7.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_8.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_8.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_8.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_9.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_9.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_9.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_10.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_10.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_10.jpg" alt="" data-width="773" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_11.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_11.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_11.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_12.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_12.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_12.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_13.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_13.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_13.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_14.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_14.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_14.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_15.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_15.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_15.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_16.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_16.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_16.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_17.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_17.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_17.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_18.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_18.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_18.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_19.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_19.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_19.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_20.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_20.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_20.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_21.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_21.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_21.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_22.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_22.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_22.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_23.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_23.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_23.jpg" alt="" data-width="773" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_24.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_24.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_24.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_25.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_25.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_25.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_26.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_26.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_26.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_27.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_27.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_27.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/food/food_28.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_28.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/food/food_28.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                         </div>
