--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
     <!-- End Open Graph data -->
 
-    <link rel="icon" href="../assets/images/favicon.ico" />
+    <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
 
     <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="../assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/entypo/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/icomoon/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/font_awesome/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/cosy/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/flexslider/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/Magnific-Popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/mb.YTPlayer/css/YTPlayer.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/animate.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/reset.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/entypo/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/icomoon/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/font_awesome/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/cosy/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/flexslider/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/css/YTPlayer.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/animate.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/style.css">
     <!-- End Stylesheets -->
 
     <!-- Google tag (gtag.js) -->
@@ -82,7 +82,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html" class="active">PORTFOLIO</a>
+                    <a href="https://pavlosnikolaou.com/index.html" class="active">PORTFOLIO</a>
                 </li>
                 <li>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1R3Gofkp5S0SEyexsnsX2-aoNORlbE4TiwV8mcdSVkZcWjw/viewform">CONTACT</a>
@@ -139,7 +139,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="../architecture/index.html">
+                                    <a href="https://pavlosnikolaou.com/architecture/index.html">
                                         <h5>architecture</h5>
                                     </a>
 
@@ -158,7 +158,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="../food/index.html">
+                                    <a href="https://pavlosnikolaou.com/food/index.html">
                                         <h5>FOOD</h5>
                                     </a>
 
@@ -177,7 +177,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="../music/index.html">
+                                    <a href="https://pavlosnikolaou.com/music/index.html">
                                         <h5>MUSIC</h5>
                                     </a>
 
@@ -196,7 +196,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="../jewelry/index.html">
+                                    <a href="https://pavlosnikolaou.com/jewelry/index.html">
                                         <h5>JEWELRY</h5>
                                     </a>
 
@@ -215,7 +215,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="../fashion/index.html">
+                                    <a href="https://pavlosnikolaou.com/fashion/index.html">
                                         <h5>FASHION</h5>
                                     </a>
 
@@ -234,7 +234,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="../weddings/index.html">
+                                    <a href="https://pavlosnikolaou.com/weddings/index.html">
                                         <h5>WEDDINGS</h5>
                                     </a>
 
@@ -272,7 +272,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="../events/index.html">
+                                    <a href="https://pavlosnikolaou.com/events/index.html">
                                         <h5>EVENTS</h5>
                                     </a>
 
