--- a/old-pages/fashion.html
+++ b/old-pages/fashion.html
@@ -29,20 +29,20 @@
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
     <!-- End Open Graph data -->
 
-    <link rel="icon" href="../assets/images/favicon.ico" />
+    <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
 
     <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="../assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/entypo/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/icomoon/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/font_awesome/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/cosy/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/flexslider/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/Magnific-Popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/mb.YTPlayer/css/YTPlayer.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/animate.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/reset.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/entypo/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/icomoon/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/font_awesome/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/cosy/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/flexslider/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/css/YTPlayer.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/animate.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/style.css">
     <!-- End Stylesheets -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -145,124 +145,124 @@
 
                         <div class="images">
 
-                            <a href="../assets/images/gallery/fashion/fashion_1.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_1.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_1.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_2.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_2.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_2.jpg" alt="" data-width="1080" data-height="720">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_3.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_3.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_3.jpg" alt="" data-width="1080" data-height="720">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_4.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_4.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_4.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_5.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_5.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_5.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_6.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_6.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_6.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_7.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_7.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_7.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_8.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_8.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_8.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_9.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_9.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_9.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_10.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_10.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_10.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_11.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_11.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_11.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_12.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_12.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_12.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_13.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_13.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_13.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_14.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_14.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_14.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_15.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_15.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_15.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_16.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_16.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_16.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_17.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_17.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_17.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_18.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_18.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_18.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_19.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_19.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_19.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_20.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_20.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_20.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_21.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_21.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_21.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_22.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_22.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_22.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_23.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_23.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_23.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_24.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_24.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_24.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_25.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_25.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_25.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_26.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_26.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_26.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_27.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_27.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_27.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_28.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_28.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_28.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_29.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_29.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_29.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_30.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_30.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_30.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_31.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_31.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_31.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_32.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_32.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_32.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_33.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_33.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_33.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_34.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_34.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_34.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_35.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_35.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_35.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_36.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_36.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_36.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_37.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_37.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_37.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_38.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_38.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_38.jpg" alt="" data-width="720" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_39.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_39.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_39.jpg" alt="" data-width="1080" data-height="720">
                             </a>
-                            <a href="../assets/images/gallery/fashion/fashion_40.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/fashion/fashion_40.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/fashion/fashion_40.jpg" alt="" data-width="720" data-height="1080">
                             </a>
                         </div>
