--- a/old-pages/gallery.html
+++ b/old-pages/gallery.html
@@ -29,20 +29,20 @@
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
     <!-- End Open Graph data -->
 
-    <link rel="icon" href="../assets/images/favicon.ico" />
+    <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
 
     <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="../assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/entypo/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/icomoon/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/font_awesome/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/cosy/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/flexslider/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/Magnific-Popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/mb.YTPlayer/css/YTPlayer.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/animate.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/reset.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/entypo/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/icomoon/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/font_awesome/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/cosy/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/flexslider/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/css/YTPlayer.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/animate.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/style.css">
     <!-- End Stylesheets -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -115,37 +115,37 @@
                     <div class="container">
 
                         <div class="img">
-                            <a href="../assets/images/gallery/g5_1.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/g5_1.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/g5_1.jpg" alt="" data-width="840" data-height="1260">
                             </a>
                         </div>
 
                         <div class="img">
-                            <a href="../assets/images/gallery/g5_2.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/g5_2.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/g5_2.jpg" alt="" data-width="840" data-height="1260">
                             </a>
                         </div>
 
                         <div class="img">
-                            <a href="../assets/images/gallery/g5_3.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/g5_3.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/g5_3.jpg" alt="" data-width="2048" data-height="1367">
                             </a>
                         </div>
 
                         <div class="img">
-                            <a href="../assets/images/gallery/g5_4.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/g5_4.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/g5_4.jpg" alt="" data-width="2048" data-height="1356">
                             </a>
                         </div>
 
                         <div class="img">
-                            <a href="../assets/images/gallery/g5_5.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/g5_5.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/g5_5.jpg" alt="" data-width="584" data-height="1024">
                             </a>
                         </div>
 
                         <div class="img">
-                            <a href="../assets/images/gallery/g5_6.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/g5_6.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/g5_6.jpg" alt="" data-width="2048" data-height="1362">
                             </a>
                         </div>
