--- a/old-pages/jewelry.html
+++ b/old-pages/jewelry.html
@@ -29,20 +29,20 @@
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
     <!-- End Open Graph data -->
 
-    <link rel="icon" href="../assets/images/favicon.ico" />
+    <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
 
     <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="../assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/entypo/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/icomoon/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/font_awesome/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/cosy/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/flexslider/style.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/Magnific-Popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="../assets/plugins/mb.YTPlayer/css/YTPlayer.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/animate.min.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/reset.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/entypo/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/icomoon/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/font_awesome/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/cosy/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/flexslider/style.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/css/YTPlayer.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/animate.min.css">
+    <link type="text/css" rel="stylesheet" href="https://pavlosnikolaou.com/assets/css/style.css">
     <!-- End Stylesheets -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -145,34 +145,34 @@
 
                         <div class="images">
 
-                            <a href="../assets/images/gallery/jewelry/jewelry_1.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_1.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_1.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_23.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_23.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_23.jpg" alt="" data-width="1620" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_24.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_24.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_24.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_25.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_25.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_25.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_26.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_26.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_26.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_27.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_27.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_27.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_28.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_28.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_28.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_29.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_29.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_29.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_30.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_30.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_30.jpg" alt="" data-width="1620" data-height="1080">
                             </a>
-                            <a href="../assets/images/gallery/jewelry/jewelry_31.jpg" rel="gallery">
+                            <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_31.jpg" rel="gallery">
                                 <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_31.jpg" alt="" data-width="865" data-height="1080">
                             </a>
 
