--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/architecture_475x370.jpg" alt="Architecture Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/architecture_475x370.jpg" alt="Architecture Category"
                                     data-width="475" data-height="370">
 
                                 <div class="overlay">
@@ -153,7 +153,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/food_475x370.jpg" alt="Food Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food_475x370.jpg" alt="Food Category"
                                     data-width="475" data-height="370">
 
                                 <div class="overlay">
@@ -172,7 +172,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/music_475x774.jpg" alt="Music Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/music_475x774.jpg" alt="Music Category"
                                     data-width="475" data-height="774">
 
                                 <div class="overlay">
@@ -191,7 +191,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry_475x370.jpg" alt="Jewelry Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry_475x370.jpg" alt="Jewelry Category"
                                     data-width="475" data-height="370">
 
                                 <div class="overlay">
@@ -210,7 +210,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/fashion_1000x375.jpg" alt="Fashion Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/fashion_1000x375.jpg" alt="Fashion Category"
                                     data-width="1000" data-height="375">
 
                                 <div class="overlay">
@@ -229,7 +229,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/weddings_475x370.jpg" alt="Wedding Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/weddings_475x370.jpg" alt="Wedding Category"
                                     data-width="475" data-height="370">
 
                                 <div class="overlay">
@@ -248,7 +248,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/portraits_475x370.jpg" alt="Portraits Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/portraits_475x370.jpg" alt="Portraits Category"
                                     data-width="475" data-height="370">
 
                                 <div class="overlay">
@@ -267,7 +267,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/events_475x370.jpg" alt="Events Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/events_475x370.jpg" alt="Events Category"
                                     data-width="475" data-height="370">
 
                                 <div class="overlay">
@@ -286,7 +286,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/products_475x370.jpg" alt="Products Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/products_475x370.jpg" alt="Products Category"
                                     data-width="475" data-height="370">
 
                                 <div class="overlay">
@@ -305,7 +305,7 @@
 
                             <div class="project-cont">
 
-                                <img class="lazy" data-original="../assets/images/gallery/video_475x370.jpg" alt="Video Category"
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/video_475x370.jpg" alt="Video Category"
                                     data-width="475" data-height="370">
 
                                 <div class="overlay">
@@ -366,30 +366,30 @@
     <!-- End Footer -->
 
     <!-- Begin JavaScript -->
-    <script type="text/javascript" src="../assets/js/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="../assets/js/migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="../assets/js/modernizr-respond.js"></script>
-    <script type="text/javascript" src="../assets/js/cookie.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/modernizr-respond.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/cookie.js"></script>
     <!-- Begin Disabled because retina files do no exist and are not needed -->
-    <!-- <script type="text/javascript" src="../assets/js/retina.js"></script> -->
+    <!-- <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/retina.js"></script> -->
     <!-- End Disabled because retina files do no exist and are not needed -->
-    <script type="text/javascript" src="../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="../assets/js/scrollTo-min.js"></script>
-    <script type="text/javascript" src="../assets/js/easing.1.3.js"></script>
-    <script type="text/javascript" src="../assets/js/appear.js"></script>
-    <script type="text/javascript" src="../assets/js/imagesloaded.pkgd.min.js"></script>
-    <script type="text/javascript" src="../assets/js/jflickrfeed.min.js"></script>
-    <script type="text/javascript" src="../assets/plugins/flexslider/flexslider.min.js"></script>
-    <script type="text/javascript" src="../assets/js/isotope.min.js"></script>
-    <script type="text/javascript" src="../assets/js/queryloader2.min.js"></script>
-    <script type="text/javascript" src="../assets/js/gmap.min.js"></script>
-    <script type="text/javascript" src="../assets/js/nicescroll.min.js"></script>
-    <script type="text/javascript" src="../assets/js/fitvids.js"></script>
-    <script type="text/javascript" src="../assets/plugins/Magnific-Popup/magnific-popup.min.js"></script>
-    <script type="text/javascript" src="../assets/plugins/mb.YTPlayer/inc/mb.YTPlayer.js"></script>
-    <script type="text/javascript" src="../assets/js/mousewheel.min.js"></script>
-    <script type="text/javascript" src="../assets/js/lazyload.min.js"></script>
-    <script type="text/javascript" src="../assets/js/scripts.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/scrollTo-min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/easing.1.3.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/appear.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/jflickrfeed.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/flexslider/flexslider.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/isotope.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/queryloader2.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/gmap.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/nicescroll.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/fitvids.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/inc/mb.YTPlayer.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/mousewheel.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/lazyload.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/scripts.js"></script>
     <!-- End JavaScript -->
 
 </body>
