--- a/old-pages/food.html
+++ b/old-pages/food.html
@@ -146,88 +146,88 @@
                         <div class="images">
 
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_1.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_1.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_1.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_2.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_2.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_2.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_3.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_3.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_3.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_4.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_4.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_4.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_5.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_5.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_5.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_6.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_6.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_6.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_7.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_7.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_7.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_8.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_8.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_8.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_9.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_9.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_9.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_10.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_10.jpg" alt="" data-width="773" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_10.jpg" alt="" data-width="773" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_11.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_11.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_11.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_12.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_12.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_12.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_13.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_13.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_13.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_14.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_14.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_14.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_15.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_15.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_15.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_16.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_16.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_16.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_17.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_17.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_17.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_18.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_18.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_18.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_19.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_19.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_19.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_20.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_20.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_20.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_21.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_21.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_21.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_22.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_22.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_22.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_23.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_23.jpg" alt="" data-width="773" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_23.jpg" alt="" data-width="773" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_24.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_24.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_24.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_25.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_25.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_25.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_26.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_26.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_26.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_27.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_27.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_27.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/food/food_28.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/food/food_28.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/food/food_28.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                         </div>
 
@@ -277,30 +277,30 @@
     </footer>
     <!-- End Footer -->
     <!-- Begin JavaScript -->
-    <script type="text/javascript" src="../assets/js/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="../assets/js/migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="../assets/js/modernizr-respond.js"></script>
-    <script type="text/javascript" src="../assets/js/cookie.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/modernizr-respond.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/cookie.js"></script>
     <!-- Begin Disabled because retina files do no exist and are not needed -->
-    <!-- <script type="text/javascript" src="../assets/js/retina.js"></script> -->
+    <!-- <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/retina.js"></script> -->
     <!-- End Disabled because retina files do no exist and are not needed -->
-    <script type="text/javascript" src="../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="../assets/js/scrollTo-min.js"></script>
-    <script type="text/javascript" src="../assets/js/easing.1.3.js"></script>
-    <script type="text/javascript" src="../assets/js/appear.js"></script>
-    <script type="text/javascript" src="../assets/js/imagesloaded.pkgd.min.js"></script>
-    <script type="text/javascript" src="../assets/js/jflickrfeed.min.js"></script>
-    <script type="text/javascript" src="../assets/plugins/flexslider/flexslider.min.js"></script>
-    <script type="text/javascript" src="../assets/js/isotope.min.js"></script>
-    <script type="text/javascript" src="../assets/js/queryloader2.min.js"></script>
-    <script type="text/javascript" src="../assets/js/gmap.min.js"></script>
-    <script type="text/javascript" src="../assets/js/nicescroll.min.js"></script>
-    <script type="text/javascript" src="../assets/js/fitvids.js"></script>
-    <script type="text/javascript" src="../assets/plugins/Magnific-Popup/magnific-popup.min.js"></script>
-    <script type="text/javascript" src="../assets/plugins/mb.YTPlayer/inc/mb.YTPlayer.js"></script>
-    <script type="text/javascript" src="../assets/js/mousewheel.min.js"></script>
-    <script type="text/javascript" src="../assets/js/lazyload.min.js"></script>
-    <script type="text/javascript" src="../assets/js/scripts.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/scrollTo-min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/easing.1.3.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/appear.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/jflickrfeed.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/flexslider/flexslider.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/isotope.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/queryloader2.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/gmap.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/nicescroll.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/fitvids.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/inc/mb.YTPlayer.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/mousewheel.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/lazyload.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/scripts.js"></script>
     <!-- End JavaScript -->
 
 </body>
