--- a/old-pages/jewelry.html
+++ b/old-pages/jewelry.html
@@ -146,34 +146,34 @@
                         <div class="images">
 
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_1.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_1.jpg" alt="" data-width="1920" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_1.jpg" alt="" data-width="1920" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_23.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_23.jpg" alt="" data-width="1620" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_23.jpg" alt="" data-width="1620" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_24.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_24.jpg" alt="" data-width="1080" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_24.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_25.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_25.jpg" alt="" data-width="1080" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_25.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_26.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_26.jpg" alt="" data-width="1080" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_26.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_27.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_27.jpg" alt="" data-width="1080" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_27.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_28.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_28.jpg" alt="" data-width="1080" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_28.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_29.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_29.jpg" alt="" data-width="1080" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_29.jpg" alt="" data-width="1080" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_30.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_30.jpg" alt="" data-width="1620" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_30.jpg" alt="" data-width="1620" data-height="1080">
                             </a>
                             <a href="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_31.jpg" rel="gallery">
-                                <img class="lazy" data-original="../assets/images/gallery/jewelry/jewelry_31.jpg" alt="" data-width="865" data-height="1080">
+                                <img class="lazy" data-original="https://pavlosnikolaou.com/assets/images/gallery/jewelry/jewelry_31.jpg" alt="" data-width="865" data-height="1080">
                             </a>
 
                         </div>
@@ -224,30 +224,30 @@
     </footer>
     <!-- End Footer -->
     <!-- Begin JavaScript -->
-    <script type="text/javascript" src="../assets/js/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="../assets/js/migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="../assets/js/modernizr-respond.js"></script>
-    <script type="text/javascript" src="../assets/js/cookie.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/modernizr-respond.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/cookie.js"></script>
     <!-- Begin Disabled because retina files do no exist and are not needed -->
-    <!-- <script type="text/javascript" src="../assets/js/retina.js"></script> -->
+    <!-- <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/retina.js"></script> -->
     <!-- End Disabled because retina files do no exist and are not needed -->
-    <script type="text/javascript" src="../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="../assets/js/scrollTo-min.js"></script>
-    <script type="text/javascript" src="../assets/js/easing.1.3.js"></script>
-    <script type="text/javascript" src="../assets/js/appear.js"></script>
-    <script type="text/javascript" src="../assets/js/imagesloaded.pkgd.min.js"></script>
-    <script type="text/javascript" src="../assets/js/jflickrfeed.min.js"></script>
-    <script type="text/javascript" src="../assets/plugins/flexslider/flexslider.min.js"></script>
-    <script type="text/javascript" src="../assets/js/isotope.min.js"></script>
-    <script type="text/javascript" src="../assets/js/queryloader2.min.js"></script>
-    <script type="text/javascript" src="../assets/js/gmap.min.js"></script>
-    <script type="text/javascript" src="../assets/js/nicescroll.min.js"></script>
-    <script type="text/javascript" src="../assets/js/fitvids.js"></script>
-    <script type="text/javascript" src="../assets/plugins/Magnific-Popup/magnific-popup.min.js"></script>
-    <script type="text/javascript" src="../assets/plugins/mb.YTPlayer/inc/mb.YTPlayer.js"></script>
-    <script type="text/javascript" src="../assets/js/mousewheel.min.js"></script>
-    <script type="text/javascript" src="../assets/js/lazyload.min.js"></script>
-    <script type="text/javascript" src="../assets/js/scripts.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/scrollTo-min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/easing.1.3.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/appear.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/jflickrfeed.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/flexslider/flexslider.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/isotope.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/queryloader2.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/gmap.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/nicescroll.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/fitvids.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/Magnific-Popup/magnific-popup.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/plugins/mb.YTPlayer/inc/mb.YTPlayer.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/mousewheel.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/lazyload.min.js"></script>
+    <script type="text/javascript" src="https://pavlosnikolaou.com/assets/js/scripts.js"></script>
     <!-- End JavaScript -->
 
 </body>
