--- a/architecture/index.html
+++ b/architecture/index.html
@@ -8,25 +8,24 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Pavlos Nikolaou Photography</title>
+    <title>Architecture photograpny by Pavlos Nikolaou</title>
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Pavlos Nikolaou - Professional Photographer - Online Portfolio"/>
-    <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography"/>
+    <meta name="keywords" content="Photography, Professional photography, Photography services, Photojournalism, Fine art photography, Candid photography, Portraits, Landscape photography, Wildlife photography, Event photography, Studio photography, Commercial photography, Fashion photography, Product photography, Architectural photography, Food photography, Travel photography, Street photography, Documentary photography, Black and white photography, Experimental photography">
     <meta name="author" content="Pavlos Nikolaou"/>
     <!-- End Meta Tags -->
 
-
     <!-- Begin Open Graph data -->
-    <meta property="og:title" content="Pavlos Nikolaou" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pavlosnikolaou.com/music/index.html" />
-    <meta property="og:image" content="https://pavlosnikolaou.com/assets/images/pavlos-nikolaou.jpeg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
-    <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
+    <meta property="og:title" content="Architecture">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pavlosnikolaou.com/assets/images/gallery/architecture/architecture_3.jpg">
+    <meta property="og:image" content="https://pavlosnikolaou.com/assets/images/gallery/architecture/architecture_3.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="300">
+    <meta property="og:image:alt" content="Architecture photograpny by Pavlos Nikolaou">
     <!-- End Open Graph data -->
 
     <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
