--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="Pavlos Nikolaou - Professional Photographer - Online Portfolio" />
-    <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography" />
+    <meta name="keywords" content="Photography" />
     <meta name="author" content="Pavlos Nikolaou" />
     <!-- End Meta Tags -->
 
     <!-- Begin Open Graph data -->
     <meta property="og:title" content="Pavlos Nikolaou" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pavlosnikolaou.com/music/index.html" />
+    <meta property="og:url" content="https://pavlosnikolaou.com/" />
     <meta property="og:image" content="https://pavlosnikolaou.com/assets/images/pavlos-nikolaou.jpeg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="400" />
