--- a/contact/index.html
+++ b/contact/index.html
@@ -259,7 +259,7 @@
                 <span>VIMEO</span>
                 <i class="vimeo-icon icon3-vimeo"></i>
             </a>
-            <a href="https://www.youtube.com/channel/UCQYEVn-eKi0FM81z-GDxUgQ">
+            <a href="https://www.youtube.com/@PavlosNikolaou">
                 <span>YOUTUBE</span>
                 <i class="youtube-icon icon1-youtube"></i>
             </a>
