--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="https://www.youtube.com/channel/UCQYEVn-eKi0FM81z-GDxUgQ">
+                                    <a href="Youtube: https://www.youtube.com/@PavlosNikolaou">
                                         <h5>VIDEOS</h5>
                                     </a>
 
@@ -352,7 +352,7 @@
                 <span>VIMEO</span>
                 <i class="vimeo-icon icon3-vimeo"></i>
             </a>
-            <a href="https://www.youtube.com/channel/UCQYEVn-eKi0FM81z-GDxUgQ">
+            <a href="Youtube: https://www.youtube.com/@PavlosNikolaou">
                 <span>YOUTUBE</span>
                 <i class="youtube-icon icon1-youtube"></i>
             </a>
