--- a/old-pages/portfolio.html
+++ b/old-pages/portfolio.html
@@ -282,7 +282,7 @@
 
                                 <div class="overlay">
 
-                                    <a href="https://www.youtube.com/channel/UCQYEVn-eKi0FM81z-GDxUgQ"><h5>VIDEOS</h5></a>
+                                    <a href="https://www.youtube.com/@PavlosNikolaou"><h5>VIDEOS</h5></a>
 
                                 </div>
                             
@@ -322,7 +322,7 @@
                 <span>VIMEO</span>
                 <i class="vimeo-icon icon3-vimeo"></i>
             </a>
-            <a href="https://www.youtube.com/channel/UCQYEVn-eKi0FM81z-GDxUgQ">
+            <a href="https://www.youtube.com/@PavlosNikolaou">
                 <span>YOUTUBE</span>
                 <i class="youtube-icon icon1-youtube"></i>
             </a>
