--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 
         gtag('config', 'UA-108837375-2');
     </script>
+    <!-- End Google tag (gtag.js) -->
+
+    <!-- Google Ads -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8582436112221582"
+        crossorigin="anonymous"></script>
+    <!-- End Google Ads -->
 
 </head>
 <!-- End Head -->
