--- a/weddings/index.html
+++ b/weddings/index.html
@@ -263,7 +263,7 @@
                 <span>VIMEO</span>
                 <i class="vimeo-icon icon3-vimeo"></i>
             </a>
-            <a href="https://www.youtube.com/@PavlosNikolaou">
+            <a href="https://www.youtube.com/channel/UCLbo_B9jej5rdy74UNftCig?sub_confirmation=1">
                 <span>YOUTUBE</span>
                 <i class="youtube-icon icon1-youtube"></i>
             </a>
