--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
         <a href="index.html" class="logo-container">
             <h3 class="title">PAVLOS NIKOLAOU PHOTOGRAPHY</h3>
         </a>
+        
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8582436112221582"
+        crossorigin="anonymous"></script>
+        <!-- Leaderboard 728x90px -->
+        <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-8582436112221582"
+                data-ad-slot="9003969155"
+                data-ad-format="auto"
+                data-full-width-responsive="true"></ins>
+        <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+
 
         <nav>
             <ul>
