--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <meta property="og:title" content="Pavlos Nikolaou" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pavlosnikolaou.com/" />
-    <meta property="og:image" content="https://pavlosnikolaou.com/assets/images/pavlos-nikolaou.jpeg" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image" content="https://pavlosnikolaou.com/assets/images/pavlos-nikolaou-logo.jpg" />
+    <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
@@ -99,6 +99,7 @@
 
     </header>
     <!-- End Header -->
+
 
     <!-- Begin Content -->
     <div class="main-container with-padding">
